Borrado logico de productos
